# idogaf-html-parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  idogaf.pc.in
include/: attribute.h  class.h  document.h  element.h  id.h  idogaf.h  manager.h  memorymanager.h  misc.h  parser.h  script.h  search.h  style.h
src/: attribute.cpp  class.cpp  document.cpp  element.cpp  id.cpp  manager.cpp  memorymanager.cpp  misc.cpp  parser.cpp  script.cpp  search.cpp  style.cpp
